Login and jwt logic

--- a/frontend/static/css/colors.css
+++ b/frontend/static/css/colors.css
@@ -2,6 +2,7 @@
     --violet: #5a6acf;
     --light-violet: #c7ceff;
     --dark-violet: #37375c;
+    --dark-violet-transparent: #37375c11;
     --light-grey: #f6f6fb;
     --grey: #627b87;
     --dark-grey: #273240;
@@ -20,11 +21,12 @@
     --logo-background: var(--violet);
     --logo-color: var(--white);
     --background: var(--white);
+    --background-active: var(--light-violet);
+    --background-transparent: var(--dark-violet-transparent);
     --search-background: var(--light-grey);
-    --border-active: var(--light-violet);
-    --background-transparent: var(--dark-transparent);
-    --icon: var(--grey);
     --border: var(--light-grey);
+    --border-active: var(--light-violet);
+    --icon: var(--grey);
 
     /* stuts colors */
     --danger: var(--red);
@@ -36,6 +38,9 @@
 
     --button-secondary: var(--light-violet);
     --button-secondary-hover: var(--violet);
+
+    /* shadow */
+    --box-shadow: 0 0 10px var(--background-transparent);
 
     html.theme-dark {
         --font-violetfont-color: var(--white);
