refresh token update

--- a/frontend/static/css/colors.css
+++ b/frontend/static/css/colors.css
@@ -7,7 +7,7 @@
     --grey: #627b87;
     --dark-grey: #273240;
     --black: #080808;
-    --white: #fbfbfb;
+    --white: #5a5050;
     --dark-transparent: #37375c4b;
     --white-transparent: #f6f6fb49;
     --red: #a10101;
